# albion-research-lab

./: # OMX.md  .gitignore  .gitmodules  LINEAGE.md  LOCAL_PATHS.md  OMX.d  OMX_INTEGRATION.md  README.md  pyproject.toml  validate_cross_repo_pipeline.py
.codex/agents/: prometheus-strict-metis.toml  prometheus-strict-momus.toml  prometheus-strict-oracle.toml  scholastic.toml
.codex/skills/autoresearch-lab/: SKILL.md
.codex/skills/autoresearch-lab/scripts/: autoresearch_ops.py
.github/workflows/: ci.yml
Phase 2 encode current working method/: file_layout
Phase 2 encode current working method/Phase 2 encode current working method/: Phase 2 encode current working method.md
backends/: codex.py
docs/: current_method.md
docs/dev_guides_build_only/: BADGES.md  BUILD_PLAN.md
examples/tom_ai_research_team/: repo_overlay.yaml
policies/: artifact_contract.yaml  cross_repo_pipeline.yaml
tests/: test_autoresearch_ops.py  test_cross_repo_pipeline_validator.py
