[project]
name = "albion-research-lab"
version = "0.1.0"
description = "Autonomous research orchestration lab with OMX and autoresearch baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".venv",
    "graphify-out",
    "oh-my-codex",
    "worktrees",
    "analysis.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"train.py" = ["E402", "F841"]
".codex/skills/autoresearch-lab/scripts/dashboard_server.py" = ["E402"]


